Navbar Z-index and navbar handler issue is solved, Issue number #715

--- a/style.css
+++ b/style.css
@@ -1284,6 +1284,7 @@ button {
   #menuList {
     overflow: hidden;
     transition: 0.5s;
+    z-index: 99;
   }
 
   .row {
